--- a/app/src/main/res/values/strings_settings.xml
+++ b/app/src/main/res/values/strings_settings.xml
@@ -15,4 +15,5 @@
     <string name="load_error">Не удалось загрузить данные</string>
     <string name="get_user_error">Ошибка получения данных о пользователе</string>
     <string name="update_user_error">Ошибка обновления данных о пользователе</string>
+    <string name="logout">Выйти</string>
 </resources>
